RESOLVED FIXED276722
[WebGPU] mesh / batch sample flickers on Safari
https://bugs.webkit.org/show_bug.cgi?id=276722
Summary [WebGPU] mesh / batch sample flickers on Safari
Mike Wyrzykowski
Reported 2024-07-17 11:27:16 PDT
[WebGPU] mesh / batch sample flickers on Safari
Attachments
Mike Wyrzykowski
Comment 1 2024-07-17 11:28:12 PDT
Mike Wyrzykowski
Comment 2 2024-07-17 11:29:17 PDT
EWS
Comment 3 2024-07-18 09:38:18 PDT
Committed 281091@main (1a369b1d5a86): <https://commits.webkit.org/281091@main> Reviewed commits have been landed. Closing PR #30912 and removing active labels.
Mike Wyrzykowski
Comment 4 2024-07-31 22:43:58 PDT
*** Bug 277465 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.